[package]
name = "shannon-entropy-wasm"
version = "1.0.0"
edition = "2021"
authors = ["insanitybit <insanitybit@gmail.com>"]
description = "A simple library to calculate the Shannon entropy of a string"
license = "MIT OR Apache-2.0"
keywords = ["shannon", "entropy"]
repository = "https://github.com/ZReC/shannon-entropy-wasm"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
